WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63378
SOFT_LINK_POINTER_OPTIONAL isn't optional.
https://bugs.webkit.org/show_bug.cgi?id=63378
Summary
SOFT_LINK_POINTER_OPTIONAL isn't optional.
Jer Noble
Reported
2011-06-24 23:15:01 PDT
SOFT_LINK_POINTER_OPTIONAL isn't optional.
Attachments
Patch
(1.48 KB, patch)
2011-06-24 23:18 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2011-06-24 23:16:13 PDT
SOFT_LINK_POINTER_OPTIONAL was intended to be optional, but would crash if the requested symbol was not present in the passed in framework, in the same way SOFT_LINK_POINTER would.
Jer Noble
Comment 2
2011-06-24 23:18:10 PDT
Created
attachment 98582
[details]
Patch
Maciej Stachowiak
Comment 3
2011-06-25 13:29:19 PDT
Comment on
attachment 98582
[details]
Patch r=me
Darin Adler
Comment 4
2011-06-25 13:30:02 PDT
Comment on
attachment 98582
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=98582&action=review
> Source/WebCore/platform/mac/SoftLinking.h:141 > - pointer##name = static_cast<type>(*pointer); \ > + if (pointer) \ > + pointer##name = static_cast<type>(*pointer); \
Looks OK. I guess that pointer##name is a global and so is guaranteed to be initialized to zero.
WebKit Review Bot
Comment 5
2011-06-25 14:20:35 PDT
Comment on
attachment 98582
[details]
Patch Clearing flags on attachment: 98582 Committed
r89748
: <
http://trac.webkit.org/changeset/89748
>
WebKit Review Bot
Comment 6
2011-06-25 14:20:39 PDT
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 7
2011-06-25 14:36:41 PDT
Comment on
attachment 98582
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=98582&action=review
>> Source/WebCore/platform/mac/SoftLinking.h:141 >> + pointer##name = static_cast<type>(*pointer); \ > > Looks OK. I guess that pointer##name is a global and so is guaranteed to be initialized to zero.
Yup, global static. Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug