2011-06-25  Jer Noble  <jer.noble@apple.com>

Reviewed by Maciej Stachowiak.

        SOFT_LINK_POINTER_OPTIONAL isn't optional.
        https://bugs.webkit.org/show_bug.cgi?id=63378

        Continuation of r89718.  SOFT_LINK_POINTER_OPTIONAL should check the value returned by dlsym before dereferencing it.

        * platform/mac/SoftLinking.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@89748 bbb929c8-8fbe-4397-9dbb-9b2b20218538