third_party/WebKit/Source/WebCore/platform/mac/SoftLinking.h
@@ -138,7 +138,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     static type init##name() \
     { \
         void** pointer = static_cast<void**>(dlsym(framework##Library(), #name)); \
-        pointer##name = static_cast<type>(*pointer); \
+        if (pointer) \
+            pointer##name = static_cast<type>(*pointer); \
         get##name = name##Function; \
         return pointer##name; \
     }
